# lib/api-spec/openapi.yaml
@@ -1349,6 +1349,8 @@ components:
           type: ["string", "null"]
         invoiceTemplateUrl:
           type: ["string", "null"]
+        importedInvoiceTemplate:
+          type: ["string", "null"]
         widgetToken:
           type: ["string", "null"]
         createdAt:
@@ -1444,6 +1446,8 @@ components:
           type: string
         proposalEmailEnabled:
           type: boolean
+        importedInvoiceTemplate:
+          type: string
 
     Enquiry:
       type: object
